[package]
name = "limbusart"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {git = "https://github.com/tokio-rs/axum.git", version = "0.7", features = ["macros"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
http = "1"
fastrand = {version = "2", features = ["std"]}
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"]}
dashmap = "5"
maud = "0.26"
signal-hook = "0.3"
serde_json = "1"
form_urlencoded = "1"
futures-retry = "0.6"